# okx-quant

./: .gitignore  Agent.md  CLAUDE.md  README.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: Research LLM quantitative trading.md
examples/: backtest_demo.py  live_trade_demo.py  market_data_demo.py
okx_quant/: __init__.py  config.py
okx_quant/agentic/: __init__.py  agents.py  config.py  pipeline.py  prompts.py  token_tracker.py
okx_quant/backtest/: __init__.py  engine.py  report.py
okx_quant/cli/: colors.py  dashboard.py  wizard.py
okx_quant/client/: __init__.py  rest.py  websocket.py
okx_quant/data/: __init__.py  market.py  news.py  screener.py
okx_quant/exchange/: __init__.py  base.py  fake.py  okx.py
okx_quant/indicators/: __init__.py  cache.py  momentum.py  trend.py
okx_quant/llm/: __init__.py  client.py
okx_quant/risk/: manager.py
okx_quant/strategy/: __init__.py  adaptive.py  base.py  bollinger.py  ensemble.py  llm_strategy.py  ma_cross.py  multi_agent_strategy.py  rsi_mean.py  trend_momentum.py
okx_quant/trading/: __init__.py  account.py  decision_log.py  executor.py  orders.py  state.py  (+3 more)
scripts/: backtest_analyze_alpha.py  backtest_grid.py  backtest_report.py  param_sweep.py  test_api.py
tests/: conftest.py  test_backtest_engine.py  test_config_env.py  test_exchange.py  test_indicator_cache.py  test_indicators.py  test_live_trader_integration.py  test_order_executor.py  test_position_restore.py  test_risk_manager.py  test_security.py  test_state_store.py  test_timeout.py
(+2 files in other folders)
